# RAG-Podcast-Q-A

./: .gitignore  pyproject.toml
airflow_home/: airflow.cfg  airflow.db
airflow_home/dags/: pipeline.py
backend/: snippet_service.py
data/text/: lex_ai_janna_levin.json  lex_ai_tim_sweeney_segments.json
elt/: chunk_and_embed.py  retrieve.py  scraper.py  transcribe.py
frontend/: app.py  index.html  script.js  styles.css
