[project]
name = "podcast-rag-pipeline"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "click>=8.1.8",
    "dotenv>=0.9.9",
    "duckdb>=1.2.2",
    "fastapi>=0.115.12",
    "feedparser>=6.0.11",
    "langchain>=0.3.25",
    "langchain-community<0.3.23",
    "langchain-openai>=0.3.16",
    "numpy<2.0",
    "posthog>=4.0.1",
    "pydantic>=2.11.4",
    "pydub>=0.25.1",
    "requests>=2.32.3",
    "rich>=14.0.0",
    "streamlit>=1.45.0",
    "uvicorn>=0.34.2",
    "whisper>=1.1.10",
]
